  * updated the search functionalities for GraphDB v9.9.0+
  * no longer possible to use a version of GraphDB minor than 9.7.0
  * fixed a bug in the search on a GraphDB containing an Apostrophe or a \
  * fixed a bug in GlobalSearch about concurrent write access to the indexes
  * added the use of the annotation SubPropertyOf in the services SKOS/addBroaderConcept and SKOS/addTopConcept
  * updated dependency on Sheet2RDF 4.2.3
  * updated dependency on Coda 1.7.4

version 10.1.1
date: 28/10/2021
  * added localization for French, thanks to Nathalie Vedovotto for the contribution!
  * fixed a bug that caused issues when registering a user with ' character into the email address, or any other value provided in the registration form
  * updated the function that names the STData/users/<user> and STData/pu_bindings/<proj>/<user>/ directories
  * fixed a bug regarding the Manchester Syntex Expressions
  * fixed a bug regarding the fuzzy search on a remote dataset
  * fixed bug in the showing oh the history entries
  * minor bugfixes
  * updated dependency on RDF4J 3.7.3 (which fixed thread leak issues in the HTTPRepository)
  * updated dependency on Sheet2RDF 4.2.2
  * updated dependency on Coda 1.7.3
  * updated dependency on MAPLE 0.0.9
  * updated dependency on Lime 0.4.3

version 10.1
date: 21/09/2021
  * when deleting a (plain) conceptualization/lexicalization, its reification through a sense is deleted as well
  * removed deprecated configuration settings for SHACL
  * generalized the support for EU-Login to SAML
  * fixed bug related to some SHACL configuration settings (e.g. validationEnabled) that were actually ignored
  * updated German localization, thanks to Roland Wingerter!
  * fixed the issues due to case-sensitive user email address comparisons
  * fixed a bug when searching in skosxl:Label
  * changed the renderer in SKOSXL to show directly also skosxl:Label label
  * fixed a bug in the ICV listConceptsRelatedDisjoint