@@ -26,13 +26,13 @@ color.debug = cyan
 color.trace = cyan
 
 # Common pattern layout for appenders
-log4j2.pattern = %d{ISO8601} | %-5p | %-16t | %-32c{1} | %X{bundle.id} - %X{bundle.name} - %X{bundle.version} | %m%n
+log4j2.pattern = %d{ISO8601} | %-5p | %-16t | %-32c{1} | %X{bundle.id} - %X{bundle.name} - %X{bundle.version} | %encode{%.-500m}{CRLF}%n
 log4j2.out.pattern = \u001b[90m%d{HH:mm:ss\.SSS}\u001b[0m %highlight{%-5level}{FATAL=${color.fatal}, ERROR=${color.error}, WARN=${color.warn}, INFO=${color.info}, DEBUG=${color.debug}, TRACE=${color.trace}} \u001b[90m[%t]\u001b[0m %msg%n%throwable
 
 
 # Root logger
 log4j2.rootLogger.level = INFO
-# uncomment to use asynchronous loggers, which require mvn:com.lmax/disruptor/3.3.2 library
+# uncomment to use asynchronous loggers, which require mvn:com.lmax/disruptor/3.3.2 and mvn:org.ops4j.pax.logging/pax-logging-log4j2-extra/1.11.4 libraries
 #log4j2.rootLogger.type = asyncRoot
 #log4j2.rootLogger.includeLocation = false
 log4j2.rootLogger.appenderRef.RollingFile.ref = RollingFile
@@ -40,6 +40,7 @@ log4j2.rootLogger.appenderRef.PaxOsgi.ref = PaxOsgi
 log4j2.rootLogger.appenderRef.Console.ref = Console
 log4j2.rootLogger.appenderRef.Console.filter.threshold.type = ThresholdFilter
 log4j2.rootLogger.appenderRef.Console.filter.threshold.level = ${karaf.log.console:-ERROR}
+#log4j2.rootLogger.appenderRef.Sift.ref = Routing
 
 # Loggers configuration
 
@@ -78,8 +79,8 @@ log4j2.appender.console.layout.pattern = ${log4j2.out.pattern}
 # Rolling file appender
 log4j2.appender.rolling.type = RollingRandomAccessFile
 log4j2.appender.rolling.name = RollingFile
-log4j2.appender.rolling.fileName = ${karaf.data}/log/karaf.log
-log4j2.appender.rolling.filePattern = ${karaf.data}/log/karaf.log.%i
+log4j2.appender.rolling.fileName = ${karaf.log}/karaf.log
+log4j2.appender.rolling.filePattern = ${karaf.log}/karaf.log.%i
 # uncomment to not force a disk flush
 #log4j2.appender.rolling.immediateFlush = false
 log4j2.appender.rolling.append = true
@@ -92,8 +93,8 @@ log4j2.appender.rolling.policies.size.size = 16MB
 # Audit file appender
 log4j2.appender.audit.type = RollingRandomAccessFile
 log4j2.appender.audit.name = AuditRollingFile
-log4j2.appender.audit.fileName = ${karaf.data}/log/security.log
-log4j2.appender.audit.filePattern = ${karaf.data}/log/security-%i.log
+log4j2.appender.audit.fileName = ${karaf.log}/security.log
+log4j2.appender.audit.filePattern = ${karaf.log}/security-%i.log
 log4j2.appender.audit.append = true
 log4j2.appender.audit.layout.type = PatternLayout
 log4j2.appender.audit.layout.pattern = %m%n
@@ -113,3 +114,20 @@ log4j2.appender.osgi.filter = *
 #log4j2.logger.http-headers.level = DEBUG
 #log4j2.logger.maven.name = org.ops4j.pax.url.mvn
 #log4j2.logger.maven.level = TRACE
+
+# Sift - MDC routing
+#log4j2.appender.routing.type = Routing
+#log4j2.appender.routing.name = Routing
+#log4j2.appender.routing.routes.type = Routes
+#log4j2.appender.routing.routes.pattern = \$\$\\\{ctx:bundle.name\}
+#log4j2.appender.routing.routes.bundle.type = Route
+#log4j2.appender.routing.routes.bundle.appender.type = RollingRandomAccessFile
+#log4j2.appender.routing.routes.bundle.appender.name = Bundle-\$\\\{ctx:bundle.name\}
+#log4j2.appender.routing.routes.bundle.appender.fileName = ${karaf.log}/bundle-\$\\\{ctx:bundle.name\}.log
+#log4j2.appender.routing.routes.bundle.appender.filePattern = ${karaf.log}/bundle-\$\\\{ctx:bundle.name\}.log.%i
+#log4j2.appender.routing.routes.bundle.appender.append = true
+#log4j2.appender.routing.routes.bundle.appender.layout.type = PatternLayout
+#log4j2.appender.routing.routes.bundle.appender.layout.pattern = ${log4j2.pattern}
+#log4j2.appender.routing.routes.bundle.appender.policies.type = Policies
+#log4j2.appender.routing.routes.bundle.appender.policies.size.type = SizeBasedTriggeringPolicy
+#log4j2.appender.routing.routes.bundle.appender.policies.size.size = 8MB
