@@ -21,34 +21,34 @@
 # Comma separated list of features repositories to register by default
 #
 featuresRepositories = \
-    mvn:org.apache.karaf.features/enterprise/4.2.1/xml/features, \
-    mvn:org.apache.karaf.features/spring/4.2.1/xml/features, \
-    mvn:org.apache.karaf.features/standard/4.2.1/xml/features, \
-    mvn:org.apache.karaf.features/framework/4.2.1/xml/features, \
+    mvn:org.apache.karaf.features/enterprise/4.2.15/xml/features, \
+    mvn:org.apache.karaf.features/spring/4.2.15/xml/features, \
+    mvn:org.apache.karaf.features/standard/4.2.15/xml/features, \
+    mvn:org.apache.karaf.features/framework/4.2.15/xml/features, \
     mvn:it.uniroma2.art.semanticturkey/${project.artifactId}/${project.version}/xml/features
 
 #
 # Comma separated list of features to install at startup
 #
 featuresBoot = \
-    instance/4.2.1, \
-    package/4.2.1, \
-    log/4.2.1, \
-    ssh/4.2.1, \
-    framework/4.2.1, \
-    system/4.2.1, \
-    eventadmin/4.2.1, \
-    feature/4.2.1, \
-    shell/4.2.1, \
-    management/4.2.1, \
-    service/4.2.1, \
-    jaas/4.2.1, \
-    deployer/4.2.1, \
-    diagnostic/4.2.1, \
-    wrap/2.5.4, \
-    bundle/4.2.1, \
-    config/4.2.1, \
-    kar/4.2.1, \
+    instance/4.2.15, \
+    package/4.2.15, \
+    log/4.2.15, \
+    ssh/4.2.15, \
+    framework/4.2.15, \
+    system/4.2.15, \
+    eventadmin/4.2.15, \
+    feature/4.2.15, \
+    shell/4.2.15, \
+    management/4.2.15, \
+    service/4.2.15, \
+    jaas/4.2.15, \
+    deployer/4.2.15, \
+    diagnostic/4.2.15, \
+    wrap/2.6.7, \
+    bundle/4.2.15, \
+    config/4.2.15, \
+    kar/4.2.15, \
     semantic_turkey
 #
 # Resource repositories (OBR) that the features resolver can use
@@ -85,6 +85,11 @@ featuresBootAsynchronous=false
 # Store cfg file for config element in feature
 #
 #configCfgStore=true
+
+#
+# Define if the feature service automatically refresh bundles
+#
+autoRefresh=true
 
 #
 # Configuration of features processing mechanism (overrides, blacklisting, modification of features)
