@@ -8,7 +8,7 @@ welcome = \
 \u001B[36m /___/\\__/_/_/_/\\_,_/_//_/\\__/_/\\__/   /_/  \\_,_/_/ /_/\\_\\\\__/\\_, /\u001B[0m\r\n\
 \u001B[36m                                                             /___/\u001B[0m\r\n\
 \r\n\
-\u001B[1m  developed by ART (Artificial Intelligence Research at Tor Vergata).\n  Running on Apache Karaf\u001B[0m (4.2.1)\r\n\
+\u001B[1m  developed by ART (Artificial Intelligence Research at Tor Vergata).\n  Running on Apache Karaf\u001B[0m (4.2.15)\r\n\
 \r\n\
 Hit '\u001B[1m<tab>\u001B[0m' for a list of available commands\r\n\
    and '\u001B[1m[cmd] --help\u001B[0m' for help on a specific command.\r\n\
